[gd_scene load_steps=5 format=3 uid="uid://c6mtgdysg6x7h"]

[ext_resource type="Texture2D" uid="uid://dcgxm2qjqieuo" path="res://icon.svg" id="1_pjt0s"]
[ext_resource type="Script" uid="uid://dsvmogmy4lka4" path="res://character.gd" id="1_wa5vi"]
[ext_resource type="Script" uid="uid://cxvq64evtcdcx" path="res://movement_component.gd" id="2_wa5vi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wfnr8"]
radius = 74.0068

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_wa5vi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_pjt0s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wfnr8")

[node name="MovementComponent" type="Node2D" parent="."]
script = ExtResource("2_wa5vi")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="MovementComponent"]
avoidance_enabled = true
radius = 1.0
max_speed = 1052.38
debug_enabled = true

[connection signal="update_velocity" from="MovementComponent" to="." method="_on_movement_component_update_velocity"]
[connection signal="velocity_computed" from="MovementComponent/NavigationAgent2D" to="MovementComponent" method="_on_navigation_agent_2d_velocity_computed"]
